
lib_LTLIBRARIES = libess.la

libess_la_CFLAGS = $(EWAPPS_CFLAGS) $(GST_CFLAGS) $(SOUP_CFLAGS) -Wall -Werror
libess_la_LIBS = $(GST_LIBS) $(SOUP_LIBS)
libess_la_SOURCES = \
	ew-hls-server.c \
	ew-hls-server.h \
	ew-server.c \
	ew-server.h \
	ew-session.c \
	ew-session.h \
	ew-config.c \
	ew-config.h \
	ew-config-form.c \
	ew-html.c \
	ew-html.h


